fix spacing when grid lines are gone

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 *:not(body):not(html) {
   box-sizing: border-box;
-  border: 1px dashed #fff;
+  /*border: 1px dashed #fff;*/
 }
 
 /*.wrap {
@@ -15,8 +15,7 @@
 }
 
 .container {
-  -webkit-box-sizing: border-box;
-  height: auto;
+  height: 1000px;
   width: 100%;
   background-color: black;
   padding-right: 18px;
@@ -27,7 +26,7 @@
   width: 90.5%;
   background-color: white;
   float: left;
-  margin: 25px 0 0px 1.5625em;
+  margin: 25px 0 0px 25px;
 }
 
  .header h3 {
@@ -52,48 +51,57 @@ li {
   float: left;
   background-color: lightgrey;
   color: black;
-  margin-left: 1.5625em;
+  margin-left: 25px;
+  margin-bottom: 20px;
+  padding-bottom: 7px;
 }
-
-.locale {
-  height: auto;
-  width: 90.5%;
+h4 {
+  margin-bottom: 10px;
+  padding-left: 25px;
   color: white;
-  margin: 105px 0 -8px 25px;
+}
+h5 {
+  margin-top: -5px;
+  padding-left: 25px;
+  color: white;
 }
 
 img {
   height: auto;
   width: 90.5%;
-  margin: 0px 25px 0 25px;
+  margin: -3px 25px 0 25px;
 }
+
+.sub-header1 {
+  box-sizing: border-box;
+  height:auto;
+  width: 90.5%;
+  margin: -4px 0 0 25px;
+  padding: .09px;
+  background-color: white;
+}
+
+.sub-header2 {
+  box-sizing: border-box;
+  height: auto;
+  width: 90.5%;
+  margin: 25px 0 0 25px;
+  padding: 1px;
+  background-color: white;
+}
+
 .left-column {
   display: none;
 }
 
 .right-column {
+  box-sizing: border-box;
   height: auto;
   width: 90.5%;
   background-color: white;
   color: black;
-  margin: 0 25px 25px 25px;
-  padding-left: 5px;
-}
-
-.sub-header1 {
-  height: auto;
-  width: 90.5%;
-  margin: -5px 35px 5px 25px;
-  padding-left: 5px;
-  background-color: white;
-}
-
-.sub-header2 {
-  height: auto;
-  width: 90.5%;
-  margin: 25px 45px 70px 25px;
-  padding-left: 5px;
-  background-color: white;
+  margin: 70px 25px -5px; 25px;
+  padding: 5px;
 }
 
 @media screen and (min-width: 550px)  {
@@ -105,27 +113,39 @@ img {
   .locale {
     display: none;
   }
-  .nav {
+
+  .sub-header1 {
+    display: none;
+  }
+
+  .sub-header2 {
+    display: none;
+  }
+
+  img {
+    height: auto;
+    width: 90.5%;
+    margin: 0px 25px 0 25px;
+  }
+
+  .top-nav {
   position: absolute;
   top: 30px;
   left: 40px;
-  height: 200px;
-  width: 100%;
+  height: 80px;
+  width: 80px;
   }
-  .main {
-    height: 500px;
-    width: 100%;
-  }
+
 
   .right-column {
     float: right;
-    height: 400px;
+    height: auto;
     width: 49.5%;
   }
   .left-column {
 
     float: left;
-    height: 400px;
+    height: auto;
     width: 49.5%;
   }
 @media screen and (min-width: 1100px) {
